Add Java compiler options